--- a/client/webUI/src/app/shared/aside/aside.component.css
+++ b/client/webUI/src/app/shared/aside/aside.component.css
@@ -17,3 +17,13 @@ nav a {
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
 
+.sidebar a.active {
+    background-color: #eb7d2e !important;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+/* .sidebar a.active {
+    background-color: #eb7d2e !important;
+    color: white !important;
+    font-weight: bold;
+} */
