--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -1,16 +1,39 @@
 <section class="bg-white border-bottom border-light">
     <header class="container-fluid d-flex justify-content-between align-items-center py-3">
+        <!-- menu button -->
         <div (click)="toggleMenu()" style="cursor: pointer;">
             <mat-icon>menu</mat-icon>
         </div>
+        <!-- /menu button -->
         <div class="header-links d-flex">
             <div class="d-flex align-items-center">
-                <mat-icon class="notifications">notifications</mat-icon>
+                <!-- notifications -->
+                <div [matMenuTriggerFor]="notify" class="notifications">
+                    <mat-icon class="notifications">notifications</mat-icon>
+                </div>
+                <!-- mat menu -->
+                <div>
+                    <mat-menu #notify="matMenu">
+                        <button mat-menu-item>
+                            <mat-icon>power_settings_new</mat-icon>
+                            <span [routerLink]="['/admin-login-access']" (click)="logOut()">Sign off</span>
+                        </button>
+                        <button mat-menu-item disabled>
+                            <mat-icon>voicemail</mat-icon>
+                            <span>Check </span>
+                        </button>
+                        <button mat-menu-item>
+                            <mat-icon>notifications_off</mat-icon>
+                            <span>Disable alerts</span>
+                        </button>
+                    </mat-menu>
+                </div>
+                <!-- /mat menu -->
+                <!-- /notifications -->
                 <!-- admin name -->
                 <div [matMenuTriggerFor]="menu" class="mx-3 admin d-flex">
                     Piyush<mat-icon>person</mat-icon>
                 </div>
-                <!-- /admin name -->
                 <!-- mat menu -->
                 <div>
                     <mat-menu #menu="matMenu">
@@ -29,6 +52,7 @@
                     </mat-menu>
                 </div>
                 <!-- /mat menu -->
+                <!-- /admin name -->                
             </div>
         </div>
     </header>
