--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -112,7 +112,7 @@
         </div>
         <!-- transactions -->
         <div class="col-4">
-            <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
+            <mat-card class="bg-white shadow-sm product-reward-card p-3 h-100" appearance="outlined">
                 <mat-card-content>
                     <div>
                         <h4>Transactions</h4>
