--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -23,7 +23,7 @@
                 <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
                     <mat-card-content class="d-block">
                         <!-- form -->
-                        <form [formGroup]="addEmployeeCodeForm" (ngSubmit)="generateCode()">
+                        <form [formGroup]="addEmployeeCodeForm" (ngSubmit)="submitForm()">
                             <h4 class="fw-bold mb-1">Employee Name</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
                                 <input matInput formControlName="employeeName" />
@@ -68,7 +68,7 @@
                             </mat-form-field>
                             <div class="mt-2">
                                 <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2"
-                                    (click)="generateCode()" (click)="submitForm()">
+                                    (click)="submitForm()">
                                     <mat-icon>celebration</mat-icon>Generate employee Code
                                 </button>
                             </div>
@@ -107,13 +107,7 @@
                     <span class="emp-code-data fw-bold text-primary">
                         {{ generatedCode|| "xxxxxxxxxx"}}
                     </span>                    
-                </div>
-                <div class="border-bottom border-light mb-4">
-                    <div class="emp-code-label fs-12 pb-2 text-uppercase">Employee Key</div>
-                    <span class="emp-code-data fw-bold text-primary">
-                        'sdfdfgg'
-                    </span>                    
-                </div>
+                </div>                
             </div>
         </div>
     </mat-dialog-content>
