--- a/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
@@ -7,13 +7,13 @@
             <div class="col-5 pe-4">
                 <div>
                     <div class="banner-font fw-bold">
-                       Edit,<span class="text-primary"> EmpCode!</span>
+                        Generate,<span class="text-primary"> EmpCode!</span>
                     </div>
                     <p class="mb-0 mt-2">Quickly craft unique employee codes!
-                    </p>
-                    <p class="mt-0"> Streamline identification and simplify team management with personalized codes.</p>
+                       </p>
+                       <p class="mt-0"> Streamline identification and simplify team management with personalized codes.</p>
                     <div>
-                        <img src="assets/images/employee.png" class="w-100 h-100 pe-4" />
+                        <img src="assets/images/employee.png" class="w-100 h-100 pe-4"/>
                     </div>
                 </div>
             </div>
@@ -23,11 +23,11 @@
                 <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
                     <mat-card-content class="d-block">
                         <!-- form -->
-                        <form [formGroup]="addEmployeeCodeForm" (ngSubmit)="generateCode()">
+                        <form [formGroup]="addEmployeeCodeForm" (ngSubmit)="submitForm()">
                             <h4 class="fw-bold mb-1">Employee Name</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
-                                <input matInput formControlName="employeeName" />
-                                <mat-icon matSuffix>vpn_key</mat-icon>
+                                <input matInput formControlName="name" />
+                                <mat-icon matSuffix>person</mat-icon>
                                 <mat-error>This is Required</mat-error>
                             </mat-form-field>
                             <h4 class="fw-bold mb-1">Department</h4>
@@ -39,6 +39,21 @@
                                 </mat-select>
                                 <mat-error>This is Required</mat-error>
                             </mat-form-field>
+                            <h4 class="fw-bold mb-1">Email</h4>
+                            <mat-form-field appearance="outline" class="d-block input-lg input">
+                                <input matInput formControlName="email"/>
+                                <mat-icon matSuffix>mail</mat-icon>
+                                <mat-error *ngIf="addEmployeeCodeForm.get('email')?.hasError('required')">
+                                    This is Required
+                                  </mat-error>
+                                  <mat-error *ngIf="addEmployeeCodeForm.get('email')?.hasError('email')">
+                                    Enter a valid email.
+                                  </mat-error>                                  
+                            </mat-form-field>
+                            <div *ngIf = isEmailAlreadyExist class="text-danger">
+                                this  email aready exists
+                            </div>
+                            
                             <h4 class="fw-bold mb-1">DOB</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
                                 <input matInput [matDatepicker]="picker" formControlName="dob">
@@ -57,8 +72,8 @@
                             </mat-form-field>
                             <div class="mt-2">
                                 <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2"
-                                    (click)="generateCode()" (click)="submitForm()">
-                                    <mat-icon>celebration</mat-icon>Generate employee Code
+                                    (click)="submitForm()">
+                                    <mat-icon>celebration</mat-icon>Update employee Code
                                 </button>
                             </div>
                             <!-- <div *ngIf="generatedCode">
@@ -87,21 +102,21 @@
                 <div class="border-bottom border-light mb-4">
                     <div class="emp-code-label fs-12 pb-2 text-uppercase">Employee Name</div>
                     <div class="emp-code-data fw-bold text-primary">
-                        {{
-                        dialogEmployeeName|| "xxxxx xxxx"}}
+                        {{dialogEmployee.name}}                        
                     </div>
                 </div>
                 <div class="border-bottom border-light mb-4 position-relative">
-                    <div class="emp-code-label fs-12 text-uppercase">Employee Code</div>
+                    <div class="emp-code-label fs-12 pb-2 text-uppercase">Employee Code</div>
                     <span class="emp-code-data fw-bold text-primary">
-                        {{ generatedCode|| "xxxxxxxxxx"}}
-                    </span>
-                    <span class="ms-2"><mat-icon matSuffix cdkCopyToClipboard={{generatedCode}}
-                            (click)="copied()">content_copy</mat-icon></span>
-                    <div *ngIf="isCopied" class="copy-text fs-12 position-absolute bg-dark text-white">
-                        copied
-                    </div>
-                </div>
+                        {{dialogEmployee.empCode}}
+                    </span>                    
+                </div>                
+                <div class="border-bottom border-light mb-4 position-relative">
+                    <div class="emp-code-label fs-12 pb-2 text-uppercase">Employee Key</div>
+                    <span class="emp-code-data fw-bold text-primary">
+                        {{dialogEmployee.password}}
+                    </span>                    
+                </div>                
             </div>
         </div>
     </mat-dialog-content>
@@ -110,7 +125,7 @@
             [mat-dialog-close]="true"><mat-icon>close</mat-icon>
             <span>Decline
             </span></a>
-        <a mat-flat-button [routerLink]="['/admin/generate-emp-code']" (click)="approve()"
+        <a mat-flat-button (click)="approve()"
             class="bg-success py-3 shadow-sm button-mh-45" mat-dialog-close><mat-icon>check</mat-icon>
             <span>Approve
             </span></a>
