--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -10,7 +10,7 @@
         <mat-icon>search</mat-icon>
       </button>
     </mat-form-field>
-    <!-- /searchbar -->     
+    <!-- /searchbar -->
     <!-- add product button -->
     <a mat-flat-button [routerLink]="['/admin/add-emp-code']"
       class="bg-dark shadow-sm button-mh-60 text-white px-5 py-4"><mat-icon>person_add</mat-icon>
@@ -25,25 +25,32 @@
       <!-- Position Column -->
       <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+        <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td> <!-- Showing index -->
       </ng-container>
       <!-- employee name -->
-      <ng-container matColumnDef="productTitle">
+      <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Employee Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.productTitle }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
       <!-- employee code -->
-      <ng-container matColumnDef="couponCode">
+      <ng-container matColumnDef="empCode">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Employee Code</th>
         <td mat-cell *matCellDef="let element" class="position-relative">
-          {{ element.couponCode }}
-          <span class="ms-2"><mat-icon matSuffix cdkCopyToClipboard={{element.couponCode}}
-              (click)="copied(element.couponCode)" class="copy-icon">content_copy</mat-icon></span>
-          <div *ngIf="copiedMap.get(element.couponCode)" class="copy-text fs-12 position-absolute bg-dark text-white">
+          {{ element.empCode }}
+          <span class="ms-2"><mat-icon matSuffix cdkCopyToClipboard={{element.empCode}}
+              (click)="copied(element.empCode)" class="copy-icon">content_copy</mat-icon></span>
+          <div *ngIf="copiedMap.get(element.empCode)" class="copy-text fs-12 position-absolute bg-dark text-white">
             copied
           </div>
         </td>
-      </ng-container>     
+      </ng-container>
+      <!-- email -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Email</th>
+        <td mat-cell *matCellDef="let element" class="position-relative">
+          {{ element.email }}
+        </td>
+      </ng-container>
       <!-- department -->
       <ng-container matColumnDef="department">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Department</th>
@@ -55,15 +62,15 @@
       <ng-container matColumnDef="joiningDate">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Joining Date</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.joiningDate}}
+          {{element.joiningDate | date:'dd-MM-yyyy'}}
         </td>
       </ng-container>
       <!-- dob -->
-      <ng-container matColumnDef="productImage">
+      <ng-container matColumnDef="dob">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">DOB</th>
         <td mat-cell *matCellDef="let element">
           <div class="p-3">
-            <img style="height: 50px" src="{{ element.productImage }}" alt="image" />
+            {{element.dob | date:'dd-MM-yyyy'}}
           </div>
         </td>
       </ng-container>
@@ -72,7 +79,7 @@
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Action</th>
         <td mat-cell *matCellDef="let element">
           <div class="d-flex">
-            <span routerLink="/admin/edit-emp-code/{{ element.position }}"
+            <span routerLink="/admin/edit-emp-code/{{ element._id }}"
               class="me-2 border border-light p-2 shadow-sm table-action-buttons cursor-pointer">
               <svg width="16" height="16" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
                 <path
