--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -23,7 +23,7 @@
                 <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
                     <mat-card-content class="d-block">
                         <!-- form -->
-                        <form [formGroup]="addEmployeeCodeForm" (ngSubmit)="submitForm()">
+                        <form [formGroup]="addEmployeeCodeForm" >
                             <h4 class="fw-bold mb-1">Employee Name</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
                                 <input matInput formControlName="name" />
@@ -110,13 +110,7 @@
                     <span class="emp-code-data fw-bold text-primary">
                         {{dialogEmployee.empCode}}
                     </span>                    
-                </div>                
-                <div class="border-bottom border-light mb-4 position-relative">
-                    <div class="emp-code-label fs-12 pb-2 text-uppercase">Employee Key</div>
-                    <span class="emp-code-data fw-bold text-primary">
-                        {{dialogEmployee.password}}
-                    </span>                    
-                </div>                
+                </div>     
             </div>
         </div>
     </mat-dialog-content>
