integrated getuser by id api and updated paginator

--- a/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
@@ -23,7 +23,7 @@
                 <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
                     <mat-card-content class="d-block">
                         <!-- form -->
-                        <form [formGroup]="addEmployeeCodeForm" (ngSubmit)="submitForm()">
+                        <form [formGroup]="addEmployeeCodeForm">
                             <h4 class="fw-bold mb-1">Employee Name</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
                                 <input matInput formControlName="name" />
