updated reaonly in input fields in edit emp code

--- a/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
@@ -41,7 +41,7 @@
                             </mat-form-field>
                             <h4 class="fw-bold mb-1">Email</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
-                                <input matInput formControlName="email"/>
+                                <input matInput formControlName="email" readonly/>
                                 <mat-icon matSuffix>mail</mat-icon>
                                 <mat-error *ngIf="addEmployeeCodeForm.get('email')?.hasError('required')">
                                     This is Required
@@ -50,13 +50,9 @@
                                     Enter a valid email.
                                   </mat-error>                                  
                             </mat-form-field>
-                            <div *ngIf = isEmailAlreadyExist class="text-danger">
-                                this  email aready exists
-                            </div>
-                            
                             <h4 class="fw-bold mb-1">DOB</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
-                                <input matInput [matDatepicker]="picker" formControlName="dob">
+                                <input matInput [matDatepicker]="picker" formControlName="dob" readonly>
                                 <mat-hint>MM/DD/YYYY</mat-hint>
                                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
@@ -64,7 +60,7 @@
                             </mat-form-field>
                             <h4 class="fw-bold mb-1">Joining Date</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
-                                <input matInput [matDatepicker]="datepicker" formControlName="joiningDate">
+                                <input matInput [matDatepicker]="datepicker" formControlName="joiningDate" readonly>
                                 <mat-hint>MM/DD/YYYY</mat-hint>
                                 <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
                                 <mat-datepicker #datepicker></mat-datepicker>
