update in dialog box in add emp code

--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -117,11 +117,11 @@
     <mat-dialog-actions class="d-flex border-top border-light">
         <a mat-flat-button (click)="decline()" class="bg-danger py-3 shadow-sm button-mh-45 me-2"
             [mat-dialog-close]="true"><mat-icon>close</mat-icon>
-            <span>Decline
+            <span>Add New Employee
             </span></a>
         <a mat-flat-button (click)="approve()"
             class="bg-success py-3 shadow-sm button-mh-45" mat-dialog-close><mat-icon>check</mat-icon>
-            <span>Approve
+            <span>Gen Emp Code
             </span></a>
     </mat-dialog-actions>
 </ng-template>
