update in buttons in dialog box

--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -115,13 +115,13 @@
         </div>
     </mat-dialog-content>
     <mat-dialog-actions class="d-flex border-top border-light">
-        <a mat-flat-button (click)="decline()" class="bg-danger py-3 shadow-sm button-mh-45 me-2"
-            [mat-dialog-close]="true"><mat-icon>close</mat-icon>
-            <span>Add New Employee
+        <a mat-flat-button (click)="decline()" class="bg-success py-3 shadow-sm button-mh-45 me-2"
+            [mat-dialog-close]="true"><mat-icon>celebration</mat-icon>
+            <span>Generate New EmpCode
             </span></a>
         <a mat-flat-button (click)="approve()"
             class="bg-success py-3 shadow-sm button-mh-45" mat-dialog-close><mat-icon>check</mat-icon>
-            <span>Gen Emp Code
+            <span>Check EmpCode List
             </span></a>
     </mat-dialog-actions>
 </ng-template>
