--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -74,6 +74,18 @@
           </div>
         </td>
       </ng-container>
+      <!-- admin access -->
+      <ng-container matColumnDef="isAdmin">
+        <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Is Admin</th>
+        <td mat-cell *matCellDef="let element">
+          <div class="p-3">
+            <mat-button-toggle-group name="fontStyle" aria-label="Font Style" [value]="element.isAdmin === 'true' ? 'yes' : 'no'" (change)="onAdminToggleChange($event.value, element._id)">
+              <mat-button-toggle value="no">No</mat-button-toggle>
+              <mat-button-toggle value="yes">Yes</mat-button-toggle>             
+            </mat-button-toggle-group>            
+          </div>
+        </td>
+      </ng-container>
       <!-- action -->
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Action</th>
