--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -26,43 +26,59 @@
         <!-- Position Column -->
         <ng-container matColumnDef="position">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">No.</th>
-          <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+          <td mat-cell *matCellDef="let element;let i = index">{{ i+1 }}</td>
         </ng-container>
         <!--name -->
-        <ng-container matColumnDef="productTitle">
+        <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Administrator Name</th>
-          <td mat-cell *matCellDef="let element">{{ element.productTitle }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
         <!-- /name -->
         <!-- code-->
-        <ng-container matColumnDef="department">
+        <ng-container matColumnDef="adminCode">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Administrator Code</th>
           <td mat-cell *matCellDef="let element">
             {{ element.department }}
           </td>
         </ng-container>
         <!-- /code -->
-        <!-- key -->
-        <ng-container matColumnDef="joiningDate">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Administrator Key</th>
+        <!-- email -->
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Email</th>
           <td mat-cell *matCellDef="let element">
             {{ element.joiningDate}}
           </td>
         </ng-container>
-        <!-- /key -->
+        <!-- /email -->
+        <!-- department -->
+        <ng-container matColumnDef="department">
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Department</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.joiningDate}}
+          </td>
+        </ng-container>
+        <!-- /department -->
+        <!-- dob -->
+        <ng-container matColumnDef="dob">
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">DOB</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.joiningDate}}
+          </td>
+        </ng-container>
+        <!-- /dob -->
+        <!-- joining date -->
+        <ng-container matColumnDef="joiningDate">
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Joining Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.joiningDate}}
+          </td>
+        </ng-container>
+        <!-- /joining date -->
         <ng-container matColumnDef="Action">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Action</th>
           <td mat-cell *matCellDef="let element">
-            <div class="d-flex">
-              <span routerLink="/admin/edit-emp-code/{{ element.position }}"
-                class="me-2 border border-light p-2 shadow-sm table-action-buttons cursor-pointer">
-                <svg width="16" height="16" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M1.287 8.208a.247.247 0 0 1 .348 0l2.111 2.106a.246.246 0 0 1-.099.408L.485 11.773a.245.245 0 0 1-.311-.311l1.054-3.156a.25.25 0 0 1 .06-.098zm6.498-6.49a.253.253 0 0 1 .348 0l2.109 2.105a.245.245 0 0 1 0 .348L4.619 9.78a.247.247 0 0 1-.349 0L2.16 7.677a.246.246 0 0 1 0-.348zM9.017.49a1.782 1.782 0 0 1 2.457 0 1.733 1.733 0 0 1 0 2.45l-.352.353a.247.247 0 0 1-.348 0L8.666 1.189a.246.246 0 0 1 0-.347z"
-                    fill="#FCA500" fill-rule="evenodd" />
-                </svg>
-              </span>
-              <span (click)="openDialog()"
+            <div class="d-flex">              
+              <span (click)="openDialog(element._id)"
                 class="border border-light p-2 shadow-sm table-action-buttons cursor-pointer">
                 <svg width="16" height="16" viewBox="0 0 12.375 13.75" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -80,7 +96,7 @@
       <div class="d-flex justify-content-center mt-2 fw-bold bg-light" *ngIf="dataSource.filteredData.length === 0">
         No result found.
       </div>
-      <mat-paginator class="bg-white" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+      <mat-paginator class="bg-white" [pageSizeOptions]="[5,10,15]" showFirstLastButtons
         aria-label="Select page of periodic elements">
       </mat-paginator>
     </div>
