--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -15,7 +15,7 @@
       <!-- /searchbar -->
       <!-- note -->
       <div class="ms-5">
-        Note : Employee key comprises of first 3 letters of employee name and dob respectively.
+        Note : Admin key comprises of first 3 letters of admin name and dob respectively.
       </div>
       <!-- /note -->
     </div>
@@ -38,7 +38,7 @@
         <ng-container matColumnDef="adminCode">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Administrator Code</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.department }}
+            {{ element.empCode }}
           </td>
         </ng-container>
         <!-- /code -->
@@ -46,7 +46,7 @@
         <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Email</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.joiningDate}}
+            {{ element.email}}
           </td>
         </ng-container>
         <!-- /email -->
@@ -54,7 +54,7 @@
         <ng-container matColumnDef="department">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Department</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.joiningDate}}
+            {{ element.department}}
           </td>
         </ng-container>
         <!-- /department -->
@@ -62,7 +62,7 @@
         <ng-container matColumnDef="dob">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">DOB</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.joiningDate}}
+            {{ element.dob | date:'dd-MM-yyyy'}}
           </td>
         </ng-container>
         <!-- /dob -->
@@ -70,7 +70,7 @@
         <ng-container matColumnDef="joiningDate">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Joining Date</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.joiningDate}}
+            {{ element.joiningDate | date:'dd-MM-yyyy'}}
           </td>
         </ng-container>
         <!-- /joining date -->
