update in settings and dashboard

--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -32,9 +32,9 @@
                     <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
                         <mat-card-content>
                             <div>
-                                <h5>Employees</h5>
+                                <h5>Total Employees</h5>
                             </div>
-                            <div>40</div>
+                            <div>{{totalEmployees}}</div>
                         </mat-card-content>
                     </mat-card>
                 </div>
