--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -37,8 +37,13 @@
         <!-- code-->
         <ng-container matColumnDef="adminCode">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Administrator Code</th>
-          <td mat-cell *matCellDef="let element">
+          <td mat-cell *matCellDef="let element" class="position-relative">
             {{ element.empCode }}
+            <span class="ms-2"><mat-icon matSuffix cdkCopyToClipboard={{element.empCode}}
+              (click)="copied(element.empCode)" class="copy-icon">content_copy</mat-icon></span>
+          <div *ngIf="copiedMap.get(element.empCode)" class="copy-text fs-12 position-absolute bg-dark text-white">
+            copied
+          </div>
           </td>
         </ng-container>
         <!-- /code -->
