--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -32,7 +32,7 @@
                 <!-- /notifications -->
                 <!-- admin name -->
                 <div [matMenuTriggerFor]="menu" class="mx-3 admin d-flex">
-                    <mat-icon>person</mat-icon>Piyush
+                    <mat-icon>person</mat-icon>{{loggedUser.name}}
                 </div>
                 <!-- mat menu -->
                 <div>
