updated header and profile settings

--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -1,6 +1,6 @@
 <section>
   <div>
-    <h5 class="fw-bold mb-4">Admin Profile Settings</h5>
+    <h5 class="fw-bold mb-4">Profile Settings</h5>
   </div>
   <!-- admin -->
   <mat-card class="bg-white border-light product-reward-card p-3" appearance="outlined">
