--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -37,14 +37,14 @@
                 <!-- mat menu -->
                 <div>
                     <mat-menu #menu="matMenu">
+                        <button mat-menu-item >
+                            <mat-icon>person</mat-icon>
+                            <span [routerLink]="['/admin/settings']">Profile</span>
+                        </button>  
                         <button mat-menu-item>
                             <mat-icon>power_settings_new</mat-icon>
                             <span [routerLink]="['/admin-login-access']" (click)="logOut()">Logout</span>
-                        </button>
-                        <button mat-menu-item >
-                            <mat-icon>person</mat-icon>
-                            <span [routerLink]="['/admin/settings']">Admin Profile</span>
-                        </button>                        
+                        </button>                                              
                     </mat-menu>
                 </div>
                 <!-- /mat menu -->
