--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -40,10 +40,10 @@
           <td mat-cell *matCellDef="let element" class="position-relative">
             {{ element.empCode }}
             <span class="ms-2"><mat-icon matSuffix cdkCopyToClipboard={{element.empCode}}
-              (click)="copied(element.empCode)" class="copy-icon">content_copy</mat-icon></span>
-          <div *ngIf="copiedMap.get(element.empCode)" class="copy-text fs-12 position-absolute bg-dark text-white">
-            copied
-          </div>
+                (click)="copied(element.empCode)" class="copy-icon">content_copy</mat-icon></span>
+            <div *ngIf="copiedMap.get(element.empCode)" class="copy-text fs-12 position-absolute bg-dark text-white">
+              copied
+            </div>
           </td>
         </ng-container>
         <!-- /code -->
@@ -82,7 +82,7 @@
         <ng-container matColumnDef="Action">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Action</th>
           <td mat-cell *matCellDef="let element">
-            <div class="d-flex">              
+            <div class="d-flex">
               <span (click)="openDialog(element._id)"
                 class="border border-light p-2 shadow-sm table-action-buttons cursor-pointer">
                 <svg width="16" height="16" viewBox="0 0 12.375 13.75" xmlns="http://www.w3.org/2000/svg">
@@ -117,7 +117,8 @@
         Cancel
       </button>
       <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
-      <button mat-button class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4" [mat-dialog-close]="true">
+      <button mat-button class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4" [mat-dialog-close]="true"
+        (click)="matDelete()">
         <mat-icon>delete</mat-icon>
         Delete
       </button>
