--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -79,8 +79,8 @@
         <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Is Admin</th>
         <td mat-cell *matCellDef="let element">
           <div class="p-3">
-            <mat-button-toggle-group name="fontStyle" aria-label="Font Style" [value]="element.isPrimaryAdmin ? 'primary' : (element.isAdmin ? 'yes' : 'no')" (change)="onAdminToggleChange($event.value, element._id)">
-              <mat-button-toggle value="no" >No</mat-button-toggle>
+            <mat-button-toggle-group name="fontStyle" aria-label="Font Style" [value]="element.isAdmin ? 'yes' : 'no'" (change)="onAdminToggleChange($event.value, element._id)">
+              <mat-button-toggle value="no" [disabled]="element.isPrimaryAdmin">No</mat-button-toggle>
               <mat-button-toggle value="yes">Yes</mat-button-toggle>             
             </mat-button-toggle-group>            
           </div>
