update in feedback form

--- a/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
+++ b/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
@@ -40,7 +40,7 @@
 
 <!-- dialog -->
 <ng-template #content>
-    <form [formGroup]="feedbackForm" (ngSubmit)="send()">
+    <form [formGroup]="feedbackForm">
         <mat-dialog-content>
             <div class="text-center">
                 <div>
